Fixed white space below footer

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -4,7 +4,7 @@
 
 html { font-size: 100%; }
 body {
-  margin: $baseLineHeight;
+  margin: $baseLineHeight $baseLineHeight 0;
   background: $backgroundColor;
   color: $textColor;
   font-size: $baseFontSize;
