--- a/scss/components/_Footer.scss
+++ b/scss/components/_Footer.scss
@@ -16,7 +16,6 @@
   margin-top: $baseLineHeight;
   margin-right: -$baseLineHeight;
   margin-left: -$baseLineHeight;
-  margin-bottom: -$baseLineHeight;
   padding-right: $baseLineHeight;
   padding-left: $baseLineHeight;
   background-color: $textColor;
